--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <img src = "eba by kiyo.jpg">
+    <img src = "eba-by-kiyo.jpg">
     <h1>Eba by Kiyo</h1>
 
     <pre>Yeah uh </pre>
@@ -102,3 +102,4 @@ Agad agad hindi na</pre>
     </footer>
 </body>
 </html>
+
