--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ Agad agad hindi na</pre>
     panghabang buhay hindi lamang pang-era'Pag kasama parang perya '
     pag wala ka 'lang eksena'</pre>
     <footer>
-      <a href="https://youtu.be/7hZdxOo2QaA?si=EU4aBb8k2kxefAaK" target="blank">
+      <a href="https://youtu.be/7hZdxOo2QaA?si=EU4aBb8k2kxefAaK" target="_blank">
       <img src="375.png" alt="Play" class="play-icon">
     </a>
     <span>
@@ -102,4 +102,5 @@ Agad agad hindi na</pre>
     </footer>
 </body>
 </html>
+
 
